Fix: bug with testimonials not showing & add css to accordian

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,3 @@
-body {
-    background-color: #F9FAFC;
-}
 .brand {
     font-family: Lato, sans-serif;
     font-size: 1.4rem;
@@ -15,17 +12,17 @@ body {
     color: silver;
 }
 .nav-link{
-    color: #FF914D !important; /* Soft Orange from the palette */
-    transition: color 0.3s ease; /* Smooth transition for hover effect */
+    color: #FF914D !important; 
+    transition: color 0.3s ease; 
 }
 .nav-link:hover {
-    color: pink !important; /* Pink color on hover */
+    color: pink !important; 
 }
 
 .active {
-    color: #3DA6FF !important; /* Electric Blue for the active link */
-    text-decoration: underline; /* Underline for active link */
-    font-weight: bold; /* Optional, makes it stand out more */
+    color: #3DA6FF !important; 
+    text-decoration: underline; 
+    font-weight: bold; 
 }
 
 .dark-bg {
@@ -56,6 +53,98 @@ footer p{
 .image-container {
     position: relative;
 }
+.testimonial-Accordion {
+    background-color: #3DA6FF;
+}
+.testimonial-item {
+    height: 100%; 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; 
+    text-align: center;
+    font-size: 20px;
+}
+.test-username{
+    text-decoration: underline;
+    font-size: 30px;
+}
+.approval {
+    font-weight: light;
+    color: #dc3545; 
+    font-size: 15px;
+}
+
+.post-link {
+    text-decoration: underline;
+    color: black;
+}
+.post-link:hover,
+.page-link {
+    color: #E84610;
+ } 
+.post-title {
+    margin-top: 10%;
+    margin-left: 5%;
+}
+.post-subtitle {
+    margin-left: 5%;
+    color: lightgray;
+} */ 
+
+.link {
+    color: #23BBBB;
+    text-decoration: none;
+}
+.link:hover,
+.link:active {
+    color: #445261;
+    text-decoration: underline;
+}
+/* Buttons */
+.accordion-button {
+    background-color: #007bff;  
+    color: white; 
+    border-color: #007bff; 
+}
+.accordion-button:not(.collapsed) {
+    background-color: #007bff;  
+    color: white; 
+    border-color: #007bff; 
+}
+.accordion-button:hover {
+    background-color: #0056b3;  
+    color: white; 
+}
+.btn-signup,
+.btn-edit, 
+.btn-comment-edit, 
+.btn-testimonial-edit {
+    color: silver;
+    background: #E84610;
+    margin-left: 20px;
+}
+.btn-signup:hover,
+.btn-signup:active {
+    background-color: #fff;
+    color: #23BBBB;
+}
+.btn-like {
+    color: #E84610;
+    border: none;
+    background: transparent;
+}
+.btn-delete, 
+.btn-comment-delete, 
+.btn-testimonial-delete {
+    color: #fff;
+    background: #E84610;
+}
+.btn-like:hover,
+.btn-like:active {
+    color: #E84610;
+    background: transparent;
+    border: none;
+}
 .image-flash {
     position: absolute;
     bottom: 5%;
@@ -79,7 +168,7 @@ footer p{
     display: inline-block;
     height: 33vh;
     width: 100%;
-}
+} */
 .masthead-text {
     background-color: #445261;
     color: white;
@@ -102,64 +191,7 @@ footer p{
     transform: skew(15deg);
     z-index: 100;
 }
-.post-link {
-    text-decoration: none;
-    color: #445261;
-}
-.post-link:hover,
-.page-link {
-    color: #E84610;
-}
-.post-title {
-    margin-top: 10%;
-    margin-left: 5%;
-}
-.post-subtitle {
-    margin-left: 5%;
-    color: lightgray;
-}
-.btn-signup,
-.btn-edit, 
-.btn-comment-edit, 
-.btn-testimonial-edit {
-    color: silver;
-    background: #E84610;
-    margin-left: 20px;
-}
-.btn-signup:hover,
-.btn-signup:active {
-    background-color: #fff;
-    color: #23BBBB;
-}
-.link {
-    color: #23BBBB;
-    text-decoration: none;
-}
-.link:hover,
-.link:active {
-    color: #445261;
-    text-decoration: underline;
-}
-.btn-like {
-    color: #E84610;
-    border: none;
-    background: transparent;
-}
-.btn-delete, 
-.btn-comment-delete, 
-.btn-testimonial-delete {
-    color: #fff;
-    background: #E84610;
-}
-.btn-like:hover,
-.btn-like:active {
-    color: #E84610;
-    background: transparent;
-    border: none;
-}
+
 .faded {
     color: rgb(172, 175, 175);
-}
-.approval {
-    color: rgb(222, 146, 168);
 }
